<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Forgot Password"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/forgot_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_forgot_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_forgot_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/btn_forgot_submit"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="5dp"
                        android:background="#125688"
                        android:text="@string/action_submit"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_forgot_cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="5dp"
                        android:background="#125688"
                        android:text="@string/action_cancel"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
