<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Change Password"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/forgot_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/change_password_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_email_changep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_forgot_password"
                        android:enabled="false"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_oldpassword_changep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Old Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_newpassword_changep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="New Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_confirm_password_changep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="New Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/btn_change_submit"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="5dp"
                        android:background="#125688"
                        android:text="@string/action_submit"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_change_cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="5dp"
                        android:background="#125688"
                        android:text="@string/action_cancel"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
