<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Login"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- <ImageView
                 android:id="@+id/iv_login_connect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="20dp"
                 android:src="@mipmap/connect_to_fb" />-->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/iv_login_connect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#a4a4a4">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="OR"
                    android:textColor="#a4a4a4" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#a4a4a4"></View>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/act_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#A4A4A4" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="#125688"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_login_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Create an Account"
                        android:textColor="#A4A4A4"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_login_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Forgot Password"
                        android:textColor="#A4A4A4"
                        android:textSize="18dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:textSize="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View"
                    android:textColor="#A4A4A4"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_login_termcondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="Term"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="and"
                    android:textColor="#A4A4A4"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_login_privacypolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="Privacy Policy"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
